# flask-rest-api

./: .gitignore  README.md  pyproject.toml
app/: __init__.py
app/config/: cli.py  config.py
app/routes/: __init__.py  auth.py  register.py  server.py  user.py
app/templates/: home.html
app/utils/: auth.py
